--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
+    "ember-bootstrap": "0.1.2",
     "ember-browserify": "^1.0.1",
     "ember-cli": "0.2.7",
     "ember-cli-app-version": "0.3.3",
